--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         text weird AI characters and learn a foreign language
       </p>
       <form
-        action="https://formsubmit.co/12e4e1ff749e9391b4324ef90c4fa99c"
+        action="https://formsubmit.co/waitlist@weirdfriends.app"
         method="POST"
         class="flex flex-col gap-3 items-center justify-center py-2 mt-8 min-w-72"
       >
         <input
           type="hidden"
           name="_next"
-          value="https://c0n0.com/weirdfriends-waitlist/thanks.html"
+          value="https://weirdfriends.app/thanks.html"
         />
         <input
           type="email"
