--- a/thanks.html
+++ b/thanks.html
@@ -52,7 +52,7 @@
       <p class="text-sm tracking-widest font-sans text-center">
         we'll be in touch soon
       </p>
-      <a href="https://c0n0.com/weirdfriends-waitlist/">
+      <a href="https://weirdfriends.app/">
         <button
           class="text-sm border border-slate-300 rounded-md p-2 hover:bg-slate-100 px-4 text-center mt-4"
         >
