switch to web3forms

--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@
         text weird AI characters and learn a foreign language
       </p>
       <form
-        action="https://formsubmit.co/waitlist@weirdfriends.app"
+        action="https://api.web3forms.com/submit"
         method="POST"
         class="flex flex-col gap-3 items-center justify-center py-2 mt-8 min-w-72"
       >
         <input
           type="hidden"
-          name="_next"
+          name="access_key"
+          value="e2d1a37f-145d-4f94-9778-d65b0259cf43"
+        />
+        <input
+          type="hidden"
+          name="redirect"
           value="https://weirdfriends.app/thanks.html"
         />
         <input
